695 fix tests